# async-fn-size

./: COPYRIGHT  Cargo.toml
src/: lib.rs
