[package]
name = "async-fn-size"
version = "0.1.0"
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen-test = "0.2"

[dev-dependencies]
